--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,3 +58,12 @@ services:
     depends_on: 
       - mysql
     entrypoint: ["php", "/var/www/html/artisan"]
+
+  phpmyadmin:
+    image: phpmyadmin:fpm-alpine
+    depends_on:
+      - mysql
+    ports:
+      - 8080:80
+    environment:
+      - PMA_ARBITRARY=1
